plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.name}-${project.minecraft_version}"
}

repositories {
	// Loom adds the essential Maven repositories for Minecraft and Fabric automatically.
}

loom {
	mods {
		"cropbiomelimiter" {
			sourceSet sourceSets.main
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

processResources {
	def version = project.version
	inputs.property "version", version
	filesMatching("fabric.mod.json") {
		expand "version": version
	}
	from("config-app") {
		into "config-app"
		include "README.md"
		include "index.html"
		include "styles.css"
		include "app.js"
		include "Open Config App.cmd"
		include "Open Config App.sh"
		include "Open Config App.command"
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

tasks.named('test') {
	enabled = false
}

tasks.register('runUnitTests', JavaExec) {
	group = 'verification'
	description = 'Runs dependency-free unit tests.'
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'rocks.theatomicoption.cropbiomelimiter.config.SmokeTestSuite'
}

check.dependsOn tasks.named('runUnitTests')

jar {
	def projectName = project.name
	inputs.property "projectName", projectName
	from("LICENSE") {
		rename { "${it}_${projectName}" }
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	repositories {
		// Add publishing repositories here when release automation is ready.
	}
}
